--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==9.0.1
 click==8.0.4
 Flask==2.0.3
+Flask-Admin==1.6.0
 Flask-Login==0.6.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
@@ -13,3 +14,4 @@ pytz==2022.1
 six==1.16.0
 SQLAlchemy==1.4.32
 Werkzeug==2.0.3
+WTForms==3.0.1
